--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="viewport" content="width=device-width,minimum-scale=1" />
     <title>{{ block "title" . }} {{ .Site.Title }} {{ end }}</title>
     <link rel="stylesheet" href="/index.css" />
     <link rel="stylesheet" href="/syntax.css" />
