Make dark mode text more readable
- Increases the brightness of dark mode text
- Fixes tailwind dev out file path
- Change color of index page description as to align with blog posts

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,7 +15,9 @@
           <div>{{ $date }}</div>
         </div>
 
-        <div class="pb-5">{{ $summary | plainify | htmlUnescape }}</div>
+        <div class="text-gray-300 pb-5">
+          {{ $summary | plainify | htmlUnescape }}
+        </div>
         <div class="flex justify-end">
           <a href="{{ .RelPermalink }}" class="btn btn-dark dark:btn-light"
             >read.more</a
