Add goat counter analytics

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -52,6 +52,11 @@
         </main>
       </div>
     </div>
+    <script
+      data-goatcounter="https://blog-pangalos-dev.goatcounter.com/count"
+      async
+      src="//gc.zgo.at/count.js"
+    ></script>
     <script src="/dark-mode.js"></script>
   </body>
 </html>
