fix light mode home page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,7 +15,7 @@
           <div>{{ $date }}</div>
         </div>
 
-        <div class="text-gray-300 pb-5">
+        <div class="dark:text-gray-300 pb-5">
           {{ $summary | plainify | htmlUnescape }}
         </div>
         <div class="flex justify-end">
