remove outline on main section
This seems to me to be very odd and I was able to trigger it far too
often

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -47,7 +47,7 @@
             </svg>
           </button>
         </header>
-        <main class="max-w-2xl mx-auto" tabindex="-1">
+        <main class="max-w-2xl mx-auto no-outline" tabindex="-1">
           {{ block "main" . }} {{ end }}
         </main>
       </div>
