--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,7 +7,7 @@
       {{ $title := .Title }}
       {{ $summary := .Summary }}
       {{ $date := dateFormat "Jan 2, 2006" .Date }}
-      <section class="item">
+      <section class="item pb-5">
         <div class="flex justify-between items-baseline">
           <div class="font-bold text-2xl pb-2">
             <a href="{{ .RelPermalink }}">{{ $title }}</a>
