--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
   <section id="main">
-    <div class="font-bold text-4xl pb-3">{{ .Title }}</div>
+    <div class="font-bold text-4xl pb-3 break-words">{{ .Title }}</div>
     <div class="pb-8">
       <article id="content" class="prose dark:prose-light">
         {{ .Content }}
