--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,11 +8,11 @@
       {{ $summary := .Summary }}
       {{ $date := dateFormat "Jan 2, 2006" .Date }}
       <section class="item pb-5">
-        <div class="flex justify-between items-baseline">
-          <div class="font-bold text-2xl pb-2">
+        <div>
+          <div class="font-bold text-2xl pb-1 break-words">
             <a href="{{ .RelPermalink }}">{{ $title }}</a>
           </div>
-          <div>{{ $date }}</div>
+          <div class="pb-2">{{ $date }}</div>
         </div>
 
         <div class="dark:text-gray-300 pb-5">
