More problems with word breaks

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,7 +2,7 @@
   <section id="main">
     <div class="font-bold text-4xl pb-3 break-words">{{ .Title }}</div>
     <div class="pb-8">
-      <article id="content" class="prose dark:prose-light">
+      <article id="content" class="prose dark:prose-light break-words">
         {{ .Content }}
       </article>
     </div>
