--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta name="viewport" content="width=device-width,minimum-scale=1" />
-    <title>{{ block "title" . }} {{ .Site.Title }} {{ end }}</title>
-    <link rel="stylesheet" href="/index.css" />
-    <link rel="stylesheet" href="/syntax.css" />
+    {{ partial "head.html" . }}
   </head>
 
   <body>
@@ -52,6 +47,5 @@
         </main>
       </div>
     </div>
-    <script src="/dark-mode.js"></script>
   </body>
 </html>
