--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,17 @@
 @import "./styles/hightlight.css";
+@font-face {
+  font-family: "CustomFont";
+  src: url("/static/Joan-Regular.woff2") format("woff2");
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  @apply font-display underline dark:text-amber-500;
+}
