--- a/src/app.css
+++ b/src/app.css
@@ -7,11 +7,15 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  @apply font-serif;
+}
+
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-  @apply font-display underline dark:text-amber-500;
+  @apply font-display dark:text-amber-500;
 }
