--- a/src/app.css
+++ b/src/app.css
@@ -12,15 +12,10 @@ body {
 }
 
 .prose h1,
-.prose h2,
 .prose h2 a,
-.prose h3,
 .prose h3 a,
-.prose h4,
 .prose h4 a,
-.prose h5,
 .prose h5 a,
-.prose h6,
 .prose h6 a {
-  @apply font-display text-amber-600 dark:text-amber-500;
+  @apply text-amber-600 dark:text-amber-500;
 }
