--- a/src/app.css
+++ b/src/app.css
@@ -11,11 +11,11 @@ body {
   @apply font-serif;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  @apply font-display text-amber-600 dark:text-amber-500;
+.prose h1,
+.prose h2 a,
+.prose h3 a,
+.prose h4 a,
+.prose h5 a,
+.prose h6 a {
+  @apply text-amber-600 dark:text-amber-500;
 }
